# vayunetra

./: .env.example  .gitattributes  .gitignore  BUILD_SPEC.md  Dockerfile  Makefile  README.md  docker-compose.yml  landing.build.css  landing.html  problem-Statement.md  pyproject.toml  tasks.py
backend/: config.py  degrade.py  geoutils.py
backend/actions/: dispatch.py  evidence.py  grap.py  ranker.py  simulate.py  why.py
backend/advisory/: generate.py  llm.py
backend/advisory/templates/: en.md.j2  hi.md.j2  mr.md.j2
backend/app/: api.py  deps.py  main.py  schemas.py
backend/features/: aqi.py  build.py  interpolate.py
backend/geo/: __init__.py  grid.py  static_features.py
backend/ingest/: datagov.py  firms.py  http.py  meteo.py  openaq.py  overpass.py
backend/models/: attribution.py  baselines.py  dataset.py  evaluate.py  event_study.py  predict.py  train.py
backend/tests/: test_api.py  test_aqi.py  test_attribution.py  test_dispatch.py  test_refresh_guards.py  test_simulate.py
config/: aqi_breakpoints.yaml  cities.yaml  grap.yaml  interventions.yaml
docs/: DECISION_LAYER.md  DIAGNOSIS.md  PROJECT_DOSSIER.md  architecture.md  metrics.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: landing.html
frontend/src/: App.tsx  Landing.tsx  api.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: AdvisoryModal.tsx  CityToggle.tsx  DecidePanel.tsx  DispatchMap.tsx  GrapChip.tsx  HexPanel.tsx  (+3 more)
scripts/: __init__.py  build_landing_css.py  decide_smoke.py  run_pipeline.py
(+4 files in other folders)
