[project]
name = "vayunetra"
version = "1.0.0"
description = "VayuNetra — urban air-quality intelligence: attribution, forecasting, enforcement evidence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "duckdb>=1.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "h3>=4.1",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "matplotlib>=3.9",
    "contextily>=1.6",
    "fpdf2>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.uv]
package = false
